--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3>The better bot for your server</h3>
     </div>
     <div class="intro">
-        <img src=/assets/avatar.png class="avatar">
+        <img src=sabreweb/assets/avatar.png class="avatar">
         <p class="intro-text">Hi 👋. This is SABRE-Bot.</p>
         <p class="intro-text" style="font-size: 18px;">
             • A multipurpose bot for smooth working of your server<br>
