--- a/auth.html
+++ b/auth.html
@@ -28,39 +28,17 @@
     </div>
     <div class="intro">
         <img src=https://sakshhamthecoder.github.io/sabreweb/assets/avatar.png class="avatar">
-        <p class="intro-text" style="font-size: 35px;">Hi 👋. This is SABRE-Bot.</p>
+        <p class="intro-text" style="font-size: 35px;">Nice addition to your server</p>
         <p class="intro-text" style="font-size: 20px;">
-            • A multipurpose bot for smooth working of your server<br>
-            • Features like moderation, image commands, economy, and other utilities<br>
-            • Custom welcome and leave messages on member joining or leaving the server<br>
-            • Fun commands for changing your mood<br><br><br><br><br><br><br>
-        <button class="invite-btn" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=765628261413683261&permissions=8&scope=bot'" type="button">Invite to Server</button><br>
+            • Why don't you try the bot on your own now<br>
+            • Or you can check out the commands for the bot from the link given below<br>
+            • Or view the source code from the link given below<br>
+            • Anything you do, just a big thanks to you for choosing this bot to be in your server<br><br><br><br><br><br><br>
         <button class="invite-btn" onclick="location.href='commands.html'" type="button">Commands</button><br>
         <button class="invite-btn" onclick="window.open('https://github.com/SakshhamTheCoder/SabreBOT')" type="button">Github</button>
-        <p class="intro-text" style="margin: 20px;">-> Image Gallery</p>
-        <ul class="nav nav-tabs nav-justified">
-            <li class="active"><a data-toggle="tab" href="#home"><span style="font-size: 20px;font-family:'Oswald', sans-serif;">Moderation</span></a></li>
-            <li><a data-toggle="tab" href="#fun"><span style="font-size: 20px;font-family:'Oswald', sans-serif;">Fun</span></a></li>
-            <li><a data-toggle="tab" href="#utility"><span style="font-size: 20px;font-family:'Oswald', sans-serif;">Utility</span></a></li>
-          </ul>
+
         <br><br><br>
-          <div class="tab-content">
-            <div id="home" class="tab-pane fade in active">
-              <h3>Moderation</h3>
-              <img src="https://sakshhamthecoder.github.io/sabreweb/assets/dsc1.png" class="resp">
-              <img src="https://sakshhamthecoder.github.io/sabreweb/assets/dsc2.png" class="resp">
-            </div>
-            <div id="fun" class="tab-pane fade">
-              <h3>Fun</h3>
-              <img src="https://sakshhamthecoder.github.io/sabreweb/assets/dsc3.png" class="resp">
-              <img src="https://sakshhamthecoder.github.io/sabreweb/assets/dsc5.png" class="resp">
-            </div>
-            <div id="utility" class="tab-pane fade">
-              <h3>Utility</h3>
-              <img src="https://sakshhamthecoder.github.io/sabreweb/assets/dsc4.png" class="resp">
-            </div>
-          </div>
-        <p class="intro-text">And much more...</p>
+
         <p id="oof"></p>
         <br><br><br><br><br><br>
     <div class="footer">
@@ -84,17 +62,6 @@
   setTimeout(function(){$('#aert').css('display','none')}, 5000)
   }
   
-}
-{
-  function checkURL(url) {
-    if (url.match(/authorised/))  // i.e. url.match(/\?deleted=1/)
-        return true;
-    return false;
-}
-
-if ( checkURL(document.location.href) ) {
-    location.href='auth.html';
-}
 }
 </script>
 </html>
