--- a/auth.html
+++ b/auth.html
@@ -27,8 +27,7 @@
         <h3>The better bot for your server</h3>
     </div>
     <div class="intro">
-        <img src=https://sakshhamthecoder.github.io/sabreweb/assets/avatar.png class="avatar">
-        <p class="intro-text" style="font-size: 35px;">Nice addition to your server</p>
+        <p class="intro-text" style="font-size: 35px;text-align: center;">Nice addition to your server</p>
         <p class="intro-text" style="font-size: 20px;">
             • Why don't you try the bot on your own now<br>
             • Or you can check out the commands for the bot from the link given below<br>
