--- a/auth.html
+++ b/auth.html
@@ -32,14 +32,12 @@
             • Why don't you try the bot on your own now<br>
             • Or you can check out the commands for the bot from the link given below<br>
             • Or view the source code from the link given below<br>
-            • Anything you do, just a big thanks to you for choosing this bot to be in your server<br><br><br><br><br><br><br>
+            • Anything you do, just a big thanks to you for choosing this bot to be in your server<br><br><br><br>
         <button class="invite-btn" onclick="location.href='commands.html'" type="button">Commands</button><br>
         <button class="invite-btn" onclick="window.open('https://github.com/SakshhamTheCoder/SabreBOT')" type="button">Github</button>
 
         <br><br><br>
 
-        <p id="oof"></p>
-        <br><br><br><br><br><br>
     <div class="footer">
       Bot is under development so there could be some bugs in it. Sorry for inconvenience.
     <div>
