--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
 }
 {
-  if(window.location.href.indexOf("authorised") != -1){
+  if(window.location.href.indexOf("authorized") != -1){
     location.href="auth.html"
   }
 }
