Invite button fixed

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             • Features like moderation, image commands, economy, and other utilities<br>
             • Custom welcome and leave messages on member joining or leaving the server<br>
             • Fun commands for changing your mood<br><br><br><br><br><br><br>
-        <button class="invite-btn" onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=765628261413683261&permissions=8&scope=bot')" type="button">Invite to Server</button><br>
+        <button class="invite-btn" onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=765628261413683261&permissions=8&scope=bot', '_blank')" type="button">Invite to Server</button><br>
         <button class="invite-btn" onclick="location.href='commands.html'" type="button">Commands</button><br>
-        <button class="invite-btn" onclick="window.open('https://github.com/SakshhamTheCoder/SabreBOT')" type="button">Github</button>
+        <button class="invite-btn" onclick="window.open('https://github.com/SakshhamTheCoder/SabreBOT', '_blank')" type="button">Github</button>
         <p class="intro-text" style="margin: 20px;">-> Image Gallery</p>
         <ul class="nav nav-tabs nav-justified">
             <li class="active"><a data-toggle="tab" href="#home"><span style="font-size: 20px;font-family:'Oswald', sans-serif;">Moderation</span></a></li>
